[gd_scene load_steps=3 format=3 uid="uid://bc578ykh27vw7"]

[ext_resource type="Script" path="res://Live/Speedrun/LiveSplit/SplitSection.gd" id="1_6cou6"]

[sub_resource type="LabelSettings" id="LabelSettings_ly1fs"]

[node name="SplitSection" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 0
script = ExtResource("1_6cou6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="BackgroundColorRect" type="ColorRect" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.4, 0.4, 0.4, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "<section-name>"

[node name="ComparisonLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_ly1fs")
horizontal_alignment = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "-"
horizontal_alignment = 2

[node name="SubSplitsMarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="SubSplitsContainer" type="VBoxContainer" parent="SubSplitsMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
